deploy/k8s/overlays/prod/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toastermovie-live
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - toastermovie.lol
      secretName: toastermovie-live-tls
  rules:
    - host: toastermovie.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: toastermovie
                port:
                  number: 80
